# Personal-Knowledge-Management-Bot-based-on-final-exam-review-

./: .env.example  README.md  pyproject.toml
docs/: screenshots.md
src/comp9414_pkm_bot/: __init__.py  ai.py  bot.py  config.py  kb.py  main.py  models.py  pipeline.py  rate_limit.py  storage.py
tests/: test_kb.py  test_storage.py
